# fairseq2

.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: _build_doc.yaml  _build_wheel-linux.yaml  _build_wheel-macos.yaml  _lint_cc.yaml  _lint_py.yaml  _lint_sh.yaml  _publish_pypi.yaml  _publish_s3.yaml
ci/docker/: build-manylinux-images.sh
ci/docker/manylinux_x86_64/: Dockerfile.cu124  Dockerfile.cu126  Dockerfile.cu128
native/: CMakeLists.txt
native/cmake/: base.cmake  summary.cmake
native/cmake/modules/: FindTorch.cmake
native/python/: setup.py
native/python/src/fairseq2n/: __init__.py
native/python/src/fairseq2n/bindings/: init.cc  module.h
native/python/src/fairseq2n/bindings/data/: init.cc
native/python/src/fairseq2n/bindings/type_casters/: data.cc  data.h  immutable_string.h  map_fn.cc  py.h  torch.cc
native/python/src/llm_lib/: CMakeLists.txt
native/python/src/llm_lib/bindings/: CMakeLists.txt  memory.cc
native/python/src/llm_lib/bindings/data/: audio.cc  data_pipeline.cc  image.cc  iterator_data_source.cc  iterator_data_source.h
native/python/src/llm_lib/bindings/data/text/: converters.cc  init.cc  sentencepiece.cc  text_reader.cc
native/python/src/llm_lib/bindings/type_casters/: map_fn.h
native/src/: fairseq2n-config.cmake.in
native/src/fairseq2n/: CMakeLists.txt  api.h  config.h.in  fmt.h  memory.h  span.h
native/src/fairseq2n/data/: bucket_by_length_data_source.h  bucket_data_source.cc  bucket_data_source.h  byte_stream.cc  byte_stream.h  collater.cc  constant_data_source.h  count_data_source.cc  count_data_source.h  data.cc  data.h  data_length_extractor.cc  data_length_extractor.h  data_source.h  element_mapper.cc  element_mapper.h  file.cc  filter_data_source.cc  immutable_string.cc  map_data_source.h  memory_stream.cc  packed_data_source.cc  packed_data_source.h  prefetch_data_source.h  py.cc  repeat_data_source.cc  round_robin_data_source.cc  shuffle_data_source.cc  shuffle_data_source.h  skip_data_source.cc  skip_data_source.h  tape.h  zip_data_source.cc  zip_file_data_source.h
native/src/fairseq2n/data/audio/: audio_decoder.h  waveform_to_fbank_converter.cc
native/src/fairseq2n/data/audio/detail/: kaldi_fbank.cc  kaldi_fbank.h
native/src/fairseq2n/data/detail/: rng.h  tensor_helpers.h  thread.h
native/src/fairseq2n/data/image/: image_decoder.h
native/src/fairseq2n/data/image/detail/: jpeg_decompress_struct.h  png_read_struct.cc  png_read_struct.h
native/src/fairseq2n/data/text/: string_splitter.cc  string_to_tensor_converter.cc  string_to_tensor_converter.h  text_line_reader.cc  utf8_stream.h
native/src/fairseq2n/data/text/detail/: utf.cc  utf.h
native/src/fairseq2n/data/text/sentencepiece/: sp_decoder.cc  sp_encoder.cc  sp_model.cc  sp_processor.h
native/src/fairseq2n/detail/: error.h  exception.h
native/src/llm_lib2n/: exception.cc  exception.h  float.h  memory.cc
native/src/llm_lib2n/data/: bucket_by_length_data_source.cc  collater.h  concat_data_source.cc  concat_data_source.h  constant_data_source.cc  data_pipeline.cc  data_pipeline.h  data_source.cc  dynamic_bucket_data_source.cc  dynamic_bucket_data_source.h  element_selector.cc  element_selector.h  file.h  file_mapper.cc  file_mapper.h  file_stream.cc  file_stream.h  filter_data_source.h  immutable_string.h  list_data_source.cc  list_data_source.h  map_data_source.cc  memory_stream.h  prefetch_data_source.cc  py.h  record_reader.cc  record_reader.h  repeat_data_source.h  round_robin_data_source.h  sample_data_source.cc  sample_data_source.h  shard_data_source.cc  shard_data_source.h  take_data_source.cc  take_data_source.h  tape-inl.h  tape.cc  yield_from_data_source.cc  yield_from_data_source.h  zip_data_source.h  (+1 more)
native/src/llm_lib2n/data/audio/: audio_decoder.cc  waveform_to_fbank_converter.h
native/src/llm_lib2n/data/audio/detail/: sndfile.cc  sndfile.h
native/src/llm_lib2n/data/detail/: exception.h  file.cc  file.h  file_system.cc  file_system.h  lru_cache.h
native/src/llm_lib2n/data/image/: image_decoder.cc
native/src/llm_lib2n/data/image/detail/: jpeg_decompress_struct.cc
native/src/llm_lib2n/data/text/: string_splitter.h  string_to_int_converter.cc  string_to_int_converter.h  text_data_source.cc  text_data_source.h  text_line_reader.h  text_reader.cc  text_reader.h  utf8_stream.cc
native/src/llm_lib2n/data/text/sentencepiece/: sentencepiece.h  sp_decoder.h  sp_encoder.h  sp_model.h  sp_processor.cc
native/src/llm_lib2n/detail/: parallel.h  thread_pool.h
native/src/llm_lib2n/generation/: ngram_repeat_block.cu
native/src/llm_lib2n/utils/: cast.h  string.h
native/tests/: CMakeLists.txt  test_float.cc  test_memory.cc  test_span.cc
native/tests/data/: test_immutable_string.cc  test_tape.cc
native/tests/data/detail/: test_lru_cache.cc
native/tests/utils/: test_cast.cc
recipes/chatbot/: chatbot.py  cli.py  llama.py  mistral.py  program.py
recipes/lm/: common.py
recipes/lm/generate/: __main__.py  config.py  dataset.py  recipe.py
recipes/lm/sft/: README.md  __main__.py  config.py  dataset.py  recipe.py
recipes/lm/train/: __main__.py  config.py  dataset.py  recipe.py
recipes/wav2vec2/asr/: __main__.py  config.py  criterion.py  metrics.py  recipe.py  wer_calculator.py
recipes/wav2vec2/ssl/: __main__.py  config.py  criterion.py  metrics.py  recipe.py
src/fairseq2/: __init__.py  data_type.py  evaluator.py  generator.py  sharder.py  trainer.py  validator.py  world_info.py
src/fairseq2/assets/: __main__.py  dirs.py  download_manager.py  metadata_provider.py
src/fairseq2/checkpoint/: __init__.py  manager.py  model_metadata.py
src/fairseq2/composition/: assets.py  lib.py  tokenizers.py
src/fairseq2/data/: audio.py
src/fairseq2/datasets/: __init__.py  batch.py  data_reader.py
src/fairseq2/generation/: __init__.py
src/llm_lib/: cluster.py  device.py  file_system.py  gang.py  io.py  logging.py  task.py
src/llm_lib/models/: hg.py  (+4 more)
tests/: common.py  conftest.py
tests/unit/: helper.py  test_data_type.py  test_gang.py
tools/: set-project-version.sh
(+392 files in other folders)
